[package]
name = "dcf-id"
version = "0.4.0"
edition = "2021"
authors = ["DeMoD LLC"]
description = "DeMoD Communications Framework - Identity & Billing Service"
license = "Proprietary"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full", "signal"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Templating
askama = "0.12"

# Authentication
argon2 = "0.5"
oauth2 = "4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Config
dotenvy = "0.15"

# Async utils
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
